--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
