--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,26 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#2f7c47",
-        "activityBar.background": "#2f7c47",
+        "activityBar.activeBackground": "#ab307e",
+        "activityBar.background": "#ab307e",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#422c74",
+        "activityBarBadge.background": "#25320e",
         "activityBarBadge.foreground": "#e7e7e7",
         "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#2f7c47",
-        "sideBar.border": "#2f7c47",
-        "statusBar.background": "#215732",
-        "statusBar.border": "#215732",
+        "sash.hoverBorder": "#ab307e",
+        "sideBar.border": "#ab307e",
+        "statusBar.background": "#832561",
+        "statusBar.border": "#832561",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#2f7c47",
-        "statusBarItem.remoteBackground": "#215732",
+        "statusBarItem.hoverBackground": "#ab307e",
+        "statusBarItem.remoteBackground": "#832561",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "tab.activeBorder": "#2f7c47",
-        "titleBar.activeBackground": "#215732",
+        "tab.activeBorder": "#ab307e",
+        "titleBar.activeBackground": "#832561",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.border": "#215732",
-        "titleBar.inactiveBackground": "#21573299",
+        "titleBar.border": "#832561",
+        "titleBar.inactiveBackground": "#83256199",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#215732"
+    "peacock.color": "#832561"
 }
