--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
